sharepoint/3.5/modules/ROOT/pages/sharepoint-connector-reference.adoc
= SharePoint Connector 3.5 Reference - Mule 4
include::reuse::partial$non-inclusive-banner.adoc[]


Anypoint Connector for SharePoint enables you to connect to a Microsoft SharePoint application.

== Configurations
---
[[sharepoint-online]]
=== SharePoint Online


==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
|Name | String | The name for this configuration. Connectors reference the configuration with this name. | | x
| Connection a| * <<sharepoint-online_oauth-authorization-code, OAuth v2.0 Authorization Code>>
* <<sharepoint-online_oauth-client-credentials, OAuth Client Credentials>> 
* <<sharepoint-online_okta, Okta>>
* <<sharepoint-online_online, Online>>
* <<sharepoint-online_security-token, (DEPRECATED) Security Token>>
 | The connection types to provide to this configuration. | | x
| Charset a| Enumeration, one of:

** US_ASCII
** ISO_8859_1
** UTF_8
** UTF_16BE
** UTF_16LE
** UTF_16 |  |  UTF_8 |
| Expiration Policy a| <<ExpirationPolicy>> |  Configures the minimum amount of time that a dynamic configuration instance can remain idle before Mule considers it eligible for expiration. This does not mean that the platform expires the instance at the exact moment that it becomes eligible. Mule purges the instances as appropriate. |  |
|===

==== Connection Types
[[sharepoint-online_oauth-authorization-code]]
===== OAuth v2.0 Authorization Code

include::connectors::partial$oauth2-description.adoc[]

====== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|======================
| Name | Type | Description | Default Value | Required
| Site Url a| String |  URL for the target SharePoint instance. |  | x
| Disable SSL certificate validation a| Boolean |  Disables the CN (Common Name) check so that the server won't throw an exception if the HTTPS certificate is not signed by a trusted partner. |  false |
| Host a| String |  Hostname for the proxy server. |  |
| Port a| Number |  Port number for the proxy server. |  |
| Username a| String |  Username to use for authenticating against the proxy server. |  |
| Password a| String |  Password to use for authenticating against the proxy server. |  |
| NTLM Domain a| String |  Domain to use for authenticating against the proxy server. |  |
| Reconnection a| <<Reconnection>> |  When the application is deployed, a connectivity test is performed on all connectors. If set to true, deployment fails if the test doesn't pass after exhausting the associated reconnection strategy. |  |
| Consumer Key a| String |  OAuth consumerKey registered with the service provider. |  | x
| Consumer Secret a| String |  OAuth consumerSecret registered with the service provider. |  | x
| Authorization Url a| String |  Authorization endpoint URL of the service provider. |  https://login.microsoftonline.com/{tenant}/oauth2/v2.0/authorize |
| Access Token Url a| String |  Access token endpoint URL of the service provider. |  https://login.microsoftonline.com/{tenant}/oauth2/v2.0/token |
| Scopes a| String |  OAuth scopes requested during the dance. If not provided, it will default to those in the annotation. |  |
| Resource Owner Id a| String |  The resource owner ID is in the format `<Resource_App_ID>/<Sharepoint_site_domain>@<Tenant_ID>`. You can find the `Resource_App_ID` and `Tenant_ID` after you create your app. Go to *Azure Active Directory > App registrations* and select the app. The `Resource_App_ID` is the *Application (client) ID*  and the `Tenant_ID` is the *Directory (tenant) ID*.  |  |
| Before a| String |  Name of the flow that is executed immediately before starting the OAuth dance. |  |
| After a| String |  Name of the flow that is executed immediately after an access token is received. |  |
| Listener Config a| String |  Reference to a <http:listener-config /> used to create the listener that receives the access token callback endpoint. |  | x
| Callback Path a| String |  Path of the access token callback endpoint.|  | x
| Authorize Path a| String |  Path of the local HTTP endpoint that triggers the OAuth dance.|  | x
| External Callback Url a| String |  If the callback endpoint is behind a proxy or accessed through a non direct URL, use this parameter to specify the OAuth provider that the URL should use to access the callback. |  |
| Object Store a| String |  A reference to the object store to use to store each resource owner ID's data. If a value is not specified, Mule automatically provisions the default object store. |  |
|======================

[[sharepoint-online_oauth-client-credentials]]
===== OAuth Client Credentials

Uses client credentials with certificate for authentication.

[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Disable SSL certificate validation a| Boolean |  Disables the CN (Common Name) check so that the server won't throw an exception if the HTTPS certificate is not signed by a trusted partner. To prevent this, you can disable the CN (Common Name) check. Avoid disabling this for production environments. |  `false` |
| Site Url a| String |  URL for the target SharePoint instance. |  | x
| Client ID a| String |  Client ID to use to call the API. |  | x
| Token URL a| String |  URL used to get an access token. |  | x
| Scopes a| String |  Defined scopes for the client ID.|  | 
| Keystore alias a| String |  Alias used to get the correct certificate from the keystore. |  | x
| Path to keystore a| String | Path to the client's keystore with the private key and certificate. |  | x
| Keystore password a| String |  Password used to access the private key from the keystore. |  | x
| Keystore type a| Enumeration, one of:

** JCEKS
** JKS
** PKCS12 |  Keystore type.  |  | x
| Object Store a| Object Store | Configures the object store that stores data for each resource owner. If not configured, Mule uses the default object store. |  | 
| Host a| String |  Hostname for the proxy server. |  | 
| Port a| Number |  Port number for the proxy server. |  | 
| Username a| String |  Username to use to authenticate against the proxy server. |  |
| Password a| String |  Password to use to authenticate against the proxy server. |  |
| NTLM Domain a| String |  Domain to use to authenticate against the proxy server. |  |
| Reconnection a| <<Reconnection>> | Configures a reconnection strategy to use when a connector operation fails to connect to an external server. |  |
|===

[[sharepoint-online_okta]]
===== Okta


====== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Okta Username a| String |  Username to use to log in to the Okta Identity Provider |  | x
| Okta Password a| String |  Password to use to log in to the Okta Identify Provider |  | x
| Okta Domain a| String |  Domain name for the Okta Identity Provider |  | x
| Okta API token a| String |  |  | x
| Sharepoint Online embedded link from Okta a| String |  |  | x
| Disable SSL certificate validation a| Boolean |  Disables the CN (Common Name) check so that the server won't throw an exception if the HTTPS certificate is not signed by a trusted partner.

NOTE: Disabling the CN check is not recommended for production environments. |  false |
| Host a| String |  Hostname for the proxy server. |  |
| Port a| Number |  Port number for the proxy server. |  |
| Username a| String |  Username to use for authenticating against the proxy server |  |
| Password a| String |  Password to use for authenticating against the proxy server |  |
| NTLM Domain a| String | Domain to use for authenticating against the proxy server |  |
| Reconnection a| <<Reconnection>> |  When the application is deployed, a connectivity test is performed on all connectors. If set to true, deployment fails if the test doesn't pass after exhausting the associated reconnection strategy. |  |
|===
[[sharepoint-online_online]]
===== Online


====== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Online Username a| String |  Username to log in with. Do not include the domain name. |  | x
| Online Password a| String |  Password to log in with |  | x
| Site Url a| String |  URL for the target SharePoint instance |  | x
| Disable SSL certificate validation a| Boolean |  Disables the CN (Common Name) check so that the server won't throw an exception if the HTTPS certificate is not signed by a trusted partner.

NOTE: Disabling the CN check is not recommended for production environments.  |  false |
| Host a| String |  Hostname for the proxy server. |  |
| Port a| Number |  Port number for the proxy server. |  |
| Username a| String |  Username to use for authenticating against the proxy server |  |
| Password a| String |  Password to use for authenticating against the proxy server |  |
| NTLM Domain a| String |  Domain to use for authenticating against the proxy server |  |
| Reconnection a| <<Reconnection>> |  When the application is deployed, a connectivity test is performed on all connectors. If set to true, deployment fails if the test doesn't pass after exhausting the associated reconnection strategy. |  |
|===
[[sharepoint-online_security-token]]
===== (DEPRECATED) Security Token

The Security Token connection provider is deprecated because the Basic Connection provider already obtains the security token.

====== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Security Token a| String |  |  | x
| Security Token Provider a| SecurityTokenProvider |  (Optional) Provider instance that provides the security token when required. |  |
| Site Url a| String |  URL for the target SharePoint instance |  | x
| Disable SSL certificate validation a| Boolean |  Disables the CN (Common Name) check so that the server won't throw an exception if the HTTPS certificate is not signed by a trusted partner.

NOTE: Disabling the CN check is not recommended for production environments.  |  false |
| Host a| String |  Hostname for the proxy server |  |
| Port a| Number |  Port number for the proxy server |  |
| Username a| String |  Username to use for authenticating against the proxy server |  |
| Password a| String |  Password to use for authenticating against the proxy server |  |
| NTLM Domain a| String |  Domain to use for authenticating against the proxy server |  |
| Reconnection a| <<Reconnection>> |  When the application is deployed, a connectivity test is performed on all connectors. If set to true, deployment fails if the test doesn't pass after exhausting the associated reconnection strategy. |  |
|===

[[sharepoint-onpremise]]
=== SharePoint On-premises


==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
|Name | String | The name for this configuration. Connectors reference the configuration with this name. | | x
| Connection a| * <<sharepoint-onpremise_claims, Claims>>
* <<sharepoint-onpremise_kerberos, Kerberos>>
* <<sharepoint-onpremise_ntlm, Ntlm>>
* <<sharepoint-onpremise_security-token, (DEPRECATED) Security Token>>
 | The connection types to provide to this configuration. | | x
| Charset a| Enumeration, one of:

** US_ASCII
** ISO_8859_1
** UTF_8
** UTF_16BE
** UTF_16LE
** UTF_16 |  |  UTF_8 |
| Expiration Policy a| <<ExpirationPolicy>> |  Configures the minimum amount of time that a dynamic configuration instance can remain idle before Mule considers it eligible for expiration. This does not mean that the platform expires the instance at the exact moment that it becomes eligible. Mule purges the instances as appropriate. |  |
|===

==== Connection Types
[[sharepoint-onpremise_claims]]
===== Claims


====== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Claims Username a| String |  Username to log in with. Do not include the domain name. |  | x
| Claims Password a| String |  Password to log in with |  | x
| Site Url a| String |  URL for the target SharePoint instance|  | x
| Sts Url a| String |  Security Token Service URL to use for claims authentication |  | x
| Scope a| String |  Application Identifier configured for this SharePoint site in the Security Token Service (`Relying Party Identifier`, `Client Identifier`, `Scope` or `Realm`). |  | x
| Disable SSL certificate validation a| Boolean |  Disables the CN (Common Name) check so that the server won't throw an exception if the HTTPS certificate is not signed by a trusted partner.

NOTE: Disabling the CN check is not recommended for production environments. |  false |
| Host a| String |  Hostname for the proxy server. |  |
| Port a| Number |  Port number for the proxy server. |  |
| Username a| String |  Username to use for authenticating against the proxy server |  |
| Password a| String |  Password to use for authenticating against the proxy server |  |
| NTLM Domain a| String |  Domain to use for authenticating against the proxy server |  |
| Reconnection a| <<Reconnection>> |  When the application is deployed, a connectivity test is performed on all connectors. If set to true, deployment fails if the test doesn't pass after exhausting the associated reconnection strategy. |  |
|===
[[sharepoint-onpremise_kerberos]]
===== Kerberos


====== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Kerberos Username a| String |  Username to log in with. Do not include the domain name. |  | x
| Kerberos Password a| String |  Password to log in with |  | x
| Site Url a| String |  URL for the target SharePoint instance |  | x
| SPN a| String |  (Optional) Service principal name for the SharePoint Web Service |  |
| Realm a| String |  (Optional) The case-sensitive default realm (Domain Name) that the user belongs to. |  |
| KDC a| String |  (Optional) The KDC (usually the Domain Controller name) to authenticate the user. |  |
| Login Properties File Path a| String |  (Optional) Path to a customized login properties file. The default values work for most cases |  |
|  Properties File Path a| String |  (Optional) Path to a customized Kerberos properties file. |  |
| Disable SSL certificate validation a| Boolean |  Disables the CN (Common Name) check so that the server won't throw an exception if the HTTPS certificate is not signed by a trusted partner.

NOTE: Disabling the CN check is not recommended for production environments.  |  false |
| Host a| String |  Hostname for the proxy server. |  |
| Port a| Number |  Port number for the proxy server. |  |
| Username a| String |  Username to use for authenticating against the proxy server |  |
| Password a| String |  Password to use for authenticating against the proxy server |  |
| NTLM Domain a| String |  Domain to use for authenticating against the proxy server|  |
| Reconnection a| <<Reconnection>> |  When the application is deployed, a connectivity test is performed on all connectors. If set to true, deployment fails if the test doesn't pass after exhausting the associated reconnection strategy. |  |
|===
[[sharepoint-onpremise_ntlm]]
===== NTLM


====== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Domain a| String |  Domain name to use for NTLM authorization |  | x
| Ntlm Username a| String |  Username to log in with. Do not include the domain name. |  | x
| Ntlm Password a| String |  Password NTLM authorization. |  | x
| Site Url a| String |  URL for the target SharePoint instance |  | x
| Disable SSL certificate validation a| Boolean |  Disables the CN (Common Name) check so that the server won't throw an exception if the HTTPS certificate is not signed by a trusted partner.

NOTE: Disabling the CN check is not recommended for production environments.  |  false |
| Host a| String |  Hostname for the proxy server. |  |
| Port a| Number |  Port number for the proxy server. |  |
| Username a| String |  Username to use for authenticating against the proxy server |  |
| Password  a| String |  Password to use for authenticating against the proxy server |  |
| NTLM Domain a| String |  Domain to use for authenticating against the proxy server|  |
| Reconnection a| <<Reconnection>> |  When the application is deployed, a connectivity test is performed on all connectors. If set to true, deployment fails if the test doesn't pass after exhausting the associated reconnection strategy. |  |
|===
[[sharepoint-onpremise_security-token]]
===== Security Token

The Security Token connection strategy connection provider is deprecated because the Basic Connection provider already obtains the security token.

====== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Security Token a| String |  |  | x
| Security Token Provider a| SecurityTokenProvider |  (Optional) Provider instance that provides the security token when required. |  |
| Site Url a| String |  URL for the target SharePoint instance |  | x
| Disable SSL certificate validation a| Boolean |  Disables the CN (Common Name) check so that the server won't throw an exception if the HTTPS certificate is not signed by a trusted partner.

NOTE: Disabling the CN check is not recommended for production environments.  |  false |
| Host a| String |  Hostname for the proxy server. |  |
| Port a| Number |  Port number for the proxy server. |  |
| Username a| String |  Username to use for authenticating against the proxy server. |  |
| Password a| String |  Password to use for authenticating against the proxy server. |  |
| NTLM Domain a| String |  Domain to use for authenticating against the proxy server |  |
| Reconnection a| <<Reconnection>> |  When the application is deployed, a connectivity test is performed on all connectors. If set to true, deployment fails if the test doesn't pass after exhausting the associated reconnection strategy. |  |
|===

== List of Sources
* <<created-objects>>
* <<deleted-objects>>
* <<modified-objects>>

== List of Operations
* <<attachFile>>
* <<fileAdd>>
* <<fileApprove>>
* <<fileCheckIn>>
* <<fileCheckOut>>
* <<fileCopyTo>>
* <<fileDelete>>
* <<fileDeny>>
* <<fileGetContent>>
* <<fileMove>>
* <<filePublish>>
* <<fileQuery>>
* <<fileRecycle>>
* <<fileUndoCheckOut>>
* <<fileUnpublish>>
* <<fileUpdateMetadata>>
* <<folderCreate>>
* <<folderDelete>>
* <<folderQuery>>
* <<getMetadata>>
* <<listCreate>>
* <<listDelete>>
* <<listGet>>
* <<listGetAll>>
* <<listItemCreate>>
* <<listItemDelete>>
* <<listItemQuery>>
* <<listItemUpdate>>
* <<listUpdate>>
* <<resolveCollection>>
* <<resolveObject>>

== Sources

[NOTE]
SharePoint Connector sources (listeners) use Object Store to save watermarks. You might experience limitations that are specific to the Object Store implementation you are using (Object Store for CloudHub deployments or Object Store for on-premises deployments), so you must configure Object Store to suit your needs. +
For more information, see https://help.mulesoft.com/s/article/The-Different-Types-of-Object-Stores-Explained[The Different Types of Object Stores Explained].

[[created-objects]]
=== On New Objects
`<sharepoint:created-objects>`

==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use | | x
| Since a| String |  Required date format is `yyyy-MM-ddTHH:mm:ssZ`. If left empty, the UTC moment of time is used as a starting point. |  |
| Object Type a| Enumeration, one of:

** FOLDER
** FILE
** LIST
** LIST_ITEM |  The type of objects to listen for |  | x
| List Id a| String |  Used when listening for newly created list items or files |  |
| Recursive a| Boolean | Used when listening for created files or folders |  false |
| Path a| String |  Base path for the FOLDER and FILE object types|  / |
| Primary Node Only a| Boolean |  Whether this source should be executed only on the primary node when running in Cluster mode|  |
| Scheduling Strategy a| scheduling-strategy |  Configures the scheduler that triggers the polling |  | x
| Redelivery Policy a| <<RedeliveryPolicy>> |  Defines a policy for processing the redelivery of the same message |  |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors |  |
|===

==== Output
[%autowidth.spread]
|===
|Type |Object
| Attributes Type a| Any
|===

=== Associated Configurations
* <<sharepoint-online>>
* <<sharepoint-onpremise>>


[[deleted-objects]]
=== On Deleted Objects
`<sharepoint:deleted-objects>`

==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use | | x
| Since a| String |  Required date format is `yyyy-MM-ddTHH:mm:ssZ` |  |
| Primary Node Only a| Boolean |  Whether this source should be executed only on the primary node when running in Cluster mode |  |
| Scheduling Strategy a| scheduling-strategy |  Configures the scheduler that triggers the polling |  | x
| Redelivery Policy a| <<RedeliveryPolicy>> |  Defines a policy for processing the redelivery of the same message |  |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors |  |
|===

==== Output
[%autowidth.spread]
|===
|Type |<<DeletedObject>>
| Attributes Type a| Any
|===

=== Associated Configurations
* <<sharepoint-online>>
* <<sharepoint-onpremise>>


[[modified-objects]]
=== On Modified Objects
`<sharepoint:modified-objects>`


==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use | | x
| Since a| String |  Required date format is `yyyy-MM-ddTHH:mm:ssZ`. If left empty, the UTC moment of time is used as a starting point |  |
| Object Type a| Enumeration, one of:

** FOLDER
** FILE
** LIST
** LIST_ITEM |  The type of objects to listen for |  | x
| List Id a| String |  Used when listening for modified list items or files |  |
| Recursive a| Boolean |  Used when listening for modified files or folders |  false |
| Path a| String |  |  / |
| Primary Node Only a| Boolean |  Whether this source should be executed only on the primary node when running in Cluster mode |  |
| Scheduling Strategy a| scheduling-strategy |  Configures the scheduler that triggers the polling |  | x
| Redelivery Policy a| <<RedeliveryPolicy>> |  Defines a policy for processing the redelivery of the same message |  |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors |  |
|===

==== Output
[%autowidth.spread]
|===
|Type |Object
| Attributes Type a| Any
|===

=== Associated Configurations
* <<sharepoint-online>>
* <<sharepoint-onpremise>>

== Operations

[[attachFile]]
=== Attach File
`<sharepoint:attach-file>`


Attach a file to an item from a SharePoint list.


==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use | | x
| List Title a| String |  Title of the list to which the item belongs |  | x
| Item Id a| String |  The ID of the list item. |  | x
| File Name a| String |  The name of the file. |  | x
| Content a| Binary |  The file content represented as a stream. The stream and file name must be specified if localFilePath is empty |  #[payload] |
| Target Variable a| String |  The name of a variable that stores the operation's output |  |
| Target Value a| String |  An expression that evaluates against the operation's output. The outcome of this expression is stored in the target variable. |  #[payload] |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors |  |
|===

==== Output
[%autowidth.spread]
|===
|Type |Object
|===

=== Associated Configurations
* <<sharepoint-online>>
* <<sharepoint-onpremise>>

==== Throws
* SHAREPOINT:INVALID_PARAMETERS
* SHAREPOINT:RETRY_EXHAUSTED
* SHAREPOINT:UNKNOWN
* SHAREPOINT:NOT_FOUND
* SHAREPOINT:CONNECTIVITY


[[fileAdd]]
=== File Add
`<sharepoint:file-add>`


Adds a file.


==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use. | | x
| File Server Relative Url a| String | Where to add the new file. |  | x
| File Content Stream a| Binary | The content that this new file should contain. |  |
| Overwrite a| Boolean | True if this operation should overwrite the destination file if it already exists, false otherwise. |  false |
| Target Variable a| String |  The name of a variable that stores the operation's output |  |
| Target Value a| String |  An expression that evaluates against the operation's output. The outcome of this expression is stored in the target variable. |  #[payload] |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors |  |
|===

==== Output
[%autowidth.spread]
|===
|Type |<<SharepointFile>>
|===

=== Associated Configurations
* <<sharepoint-online>>
* <<sharepoint-onpremise>>

==== Throws
* SHAREPOINT:INVALID_PARAMETERS
* SHAREPOINT:RETRY_EXHAUSTED
* SHAREPOINT:UNKNOWN
* SHAREPOINT:NOT_FOUND
* SHAREPOINT:CONNECTIVITY


[[fileApprove]]
=== File Approve
`<sharepoint:file-approve>`


Approves the file submitted for content approval with the specified comment. Only documents in lists that are enabled for content approval can be approved.


==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use | | x
| File Server Relative Url a| String | The path of the file to be approved |  | x
| Comment a| String | Additional comment for this approve operation |  |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors |  |
|===


=== Associated Configurations
* <<sharepoint-online>>
* <<sharepoint-onpremise>>

==== Throws
* SHAREPOINT:INVALID_PARAMETERS
* SHAREPOINT:RETRY_EXHAUSTED
* SHAREPOINT:UNKNOWN
* SHAREPOINT:NOT_FOUND
* SHAREPOINT:CONNECTIVITY


[[fileCheckIn]]
=== File Check In
`<sharepoint:file-check-in>`


Executes a check in operation on a file in SharePoint that has been previously checked out.


==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use | | x
| File Server Relative Url a| String | The path of the file to be checked in |  | x
| Check In Type a| Enumeration, one of:

** MINOR_CHECK_IN
** MAJOR_CHECK_IN
** OVERWRITE_CHECK_IN | Type of check in to execute |  | x
| Comment a| String | Additional comment for this check in |  | x
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors |  |
|===


=== Associated Configurations
* <<sharepoint-online>>
* <<sharepoint-onpremise>>

==== Throws
* SHAREPOINT:INVALID_PARAMETERS
* SHAREPOINT:RETRY_EXHAUSTED
* SHAREPOINT:UNKNOWN
* SHAREPOINT:NOT_FOUND
* SHAREPOINT:CONNECTIVITY


[[fileCheckOut]]
=== File Check Out
`<sharepoint:file-check-out>`


Executes a checkout request on file in SharePoint.


==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use | | x
| File Server Relative Url a| String | The path of the file to be checked out | | x
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors |  |
|===


=== Associated Configurations
* <<sharepoint-online>>
* <<sharepoint-onpremise>>

==== Throws
* SHAREPOINT:INVALID_PARAMETERS
* SHAREPOINT:RETRY_EXHAUSTED
* SHAREPOINT:UNKNOWN
* SHAREPOINT:NOT_FOUND
* SHAREPOINT:CONNECTIVITY


[[fileCopyTo]]
=== File Copy To
`<sharepoint:file-copy-to>`


Copies a file from fileServerRelativeUrl to newFileServerRelativeUrl.


==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use | | x
| File Server Relative Url a| String | The path of the file to be copied |  | x
| New File Server Relative Url a| String |  |  | x
| Overwrite a| Boolean | True if this operation should overwrite the destination file if it already exists, false otherwise. |  false |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors |  |
|===


=== Associated Configurations
* <<sharepoint-online>>
* <<sharepoint-onpremise>>

==== Throws
* SHAREPOINT:INVALID_PARAMETERS
* SHAREPOINT:RETRY_EXHAUSTED
* SHAREPOINT:UNKNOWN
* SHAREPOINT:NOT_FOUND
* SHAREPOINT:CONNECTIVITY


[[fileDelete]]
=== File Delete
`<sharepoint:file-delete>`


Deletes a file.


==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use | | x
| File Server Relative Url a| String | The path of the file to be deleted |  | x
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors |  |
|===


=== Associated Configurations
* <<sharepoint-online>>
* <<sharepoint-onpremise>>

==== Throws
* SHAREPOINT:INVALID_PARAMETERS
* SHAREPOINT:RETRY_EXHAUSTED
* SHAREPOINT:UNKNOWN
* SHAREPOINT:NOT_FOUND
* SHAREPOINT:CONNECTIVITY


[[fileDeny]]
=== File Deny
`<sharepoint:file-deny>`


Denies approval for a file that was submitted for content approval. Only documents in lists that are enabled for content approval can be denied.


==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use | | x
| File Server Relative Url a| String | The path of the file to be denied |  | x
| Comment a| String | Additional comment for this deny operation |  |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors |  |
|===


=== Associated Configurations
* <<sharepoint-online>>
* <<sharepoint-onpremise>>

==== Throws
* SHAREPOINT:INVALID_PARAMETERS
* SHAREPOINT:RETRY_EXHAUSTED
* SHAREPOINT:UNKNOWN
* SHAREPOINT:NOT_FOUND
* SHAREPOINT:CONNECTIVITY


[[fileGetContent]]
=== File Get Content
`<sharepoint:file-get-content>`


Retrieves content of a file in SharePoint.


==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use. | | x
| File Server Relative Url a| String | Target file that contains the content to retrieve from SharePoint. |  | x
| Target Variable a| String |  The name of a variable that stores the operation's output. |  |
| Target Value a| String |  An expression that evaluates against the operation's output. The outcome of this expression is stored in the target variable. |  #[payload] |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors |  |
|===

==== Output
[%autowidth.spread]
|===
|Type |Binary
|===

=== Associated Configurations
* <<sharepoint-online>>
* <<sharepoint-onpremise>>

==== Throws
* SHAREPOINT:INVALID_PARAMETERS
* SHAREPOINT:RETRY_EXHAUSTED
* SHAREPOINT:UNKNOWN
* SHAREPOINT:NOT_FOUND
* SHAREPOINT:CONNECTIVITY


[[fileMove]]
=== File Move
`<sharepoint:file-move>`

Executes an HTTP POST against the Sharepoint API to move a file. The `fileServerRelativeUrl` parameter must point to an existing file in SharePoint. The `newFileServerRelativeUrl` parameter must be the path for where to move the file. If the provided path is to a directory, an error will be thrown since it should be a new file path. The new file can have the same name as the old file or it can have a new name.

To use this operation as a rename operation, specify the same path in both parameters and use a different file name in the `newFileServerRelativeUrl` parameter.

==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|======================
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use | | x
| File Server Relative Url a| String |  Path to the source file |  | x
| New File Server Relative Url a| String |  Path to the destination file |  | x
| Flag a| Number a|
* 8 - Completes the move operation even if supporting files are separated from the file.
* 0 - No move operation specified.
* 1 - Overwrites a file with the same name if it exists. | 1 |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors |  |
|======================


==== Associated Configurations
* <<sharepoint-online>>
* <<sharepoint-onpremise>>

==== Throws
* SHAREPOINT:INVALID_PARAMETERS
* SHAREPOINT:RETRY_EXHAUSTED
* SHAREPOINT:UNKNOWN
* SHAREPOINT:NOT_FOUND
* SHAREPOINT:CONNECTIVITY


[[filePublish]]
=== File Publish
`<sharepoint:file-publish>`


Submits the file for content approval with the specified comment.


==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use | | x
| File Server Relative Url a| String | The path of the file to be published |  | x
| Comment a| String | Additional comment for this publish operation |  |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors |  |
|===


=== Associated Configurations
* <<sharepoint-online>>
* <<sharepoint-onpremise>>

==== Throws
* SHAREPOINT:INVALID_PARAMETERS
* SHAREPOINT:RETRY_EXHAUSTED
* SHAREPOINT:UNKNOWN
* SHAREPOINT:NOT_FOUND
* SHAREPOINT:CONNECTIVITY


[[fileQuery]]
=== File Query
`<sharepoint:file-query>`


Executes a request on SharePoint to find the files that match the specified query.


==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use. | | x
| Query a| String | The query to execute. |  | x
| Starting Folder Path a| String | The starting folder for the query. |  / |
| Recursive a| Boolean | True if the query should be executed on sub-folders, false otherwise. |  false |
| Target Variable a| String |  The name of a variable that stores the operation's output |  |
| Target Value a| String |  An expression that evaluates against the operation's output. The outcome of this expression is stored in the target variable. |  #[payload] |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors |  |
|===

==== Output
[%autowidth.spread]
|===
|Type |Array of Object
|===

=== Associated Configurations
* <<sharepoint-online>>
* <<sharepoint-onpremise>>

==== Throws
* SHAREPOINT:INVALID_PARAMETERS
* SHAREPOINT:RETRY_EXHAUSTED
* SHAREPOINT:UNKNOWN
* SHAREPOINT:NOT_FOUND
* SHAREPOINT:CONNECTIVITY


[[fileRecycle]]
=== File Recycle
`<sharepoint:file-recycle>`


Moves the file to the Recycle Bin and returns the identifier of the new Recycle Bin item.


==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use. | | x
| File Server Relative Url a| String | The path of the file to be recycled. |  | x
| Target Variable a| String |  The name of a variable that stores the operation's output |  |
| Target Value a| String |  An expression that evaluates against the operation's output. The outcome of this expression is stored in the target variable. |  #[payload] |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors |  |
|===

==== Output
[%autowidth.spread]
|===
|Type |String
|===

=== Associated Configurations
* <<sharepoint-online>>
* <<sharepoint-onpremise>>

==== Throws
* SHAREPOINT:INVALID_PARAMETERS
* SHAREPOINT:RETRY_EXHAUSTED
* SHAREPOINT:UNKNOWN
* SHAREPOINT:NOT_FOUND
* SHAREPOINT:CONNECTIVITY


[[fileUndoCheckOut]]
=== File Undo Check Out
`<sharepoint:file-undo-check-out>`


If a file is checked out, this operation can revert the checkout state.


==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use | | x
| File Server Relative Url a| String | The path of the file to revert |  | x
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors |  |
|===


=== Associated Configurations
* <<sharepoint-online>>
* <<sharepoint-onpremise>>

==== Throws
* SHAREPOINT:INVALID_PARAMETERS
* SHAREPOINT:RETRY_EXHAUSTED
* SHAREPOINT:UNKNOWN
* SHAREPOINT:NOT_FOUND
* SHAREPOINT:CONNECTIVITY


[[fileUnpublish]]
=== File Unpublish
`<sharepoint:file-unpublish>`


Removes the file from content approval or unpublishes a major version.


==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use | | x
| File Server Relative Url a| String | Path of the file to unpublish |  | x
| Comment a| String | Additional comment for this unpublish operation |  |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors |  |
|===


=== Associated Configurations
* <<sharepoint-online>>
* <<sharepoint-onpremise>>

==== Throws
* SHAREPOINT:INVALID_PARAMETERS
* SHAREPOINT:RETRY_EXHAUSTED
* SHAREPOINT:UNKNOWN
* SHAREPOINT:NOT_FOUND
* SHAREPOINT:CONNECTIVITY


[[fileUpdateMetadata]]
=== File Update Metadata
`<sharepoint:file-update-metadata>`


Update metadata for a target item in SharePoint.


==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use | | x
| File Server Relative Url a| String | Target item in SharePoint to update its metadata |  | x
| Update Properties a| Object | New metadata |  #[payload] |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors |  |
|===


=== Associated Configurations
* <<sharepoint-online>>
* <<sharepoint-onpremise>>

==== Throws
* SHAREPOINT:INVALID_PARAMETERS
* SHAREPOINT:RETRY_EXHAUSTED
* SHAREPOINT:UNKNOWN
* SHAREPOINT:NOT_FOUND
* SHAREPOINT:CONNECTIVITY


[[folderCreate]]
=== Folder Create
`<sharepoint:folder-create>`


Creates a folder in a Document list


==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use | | x
| Url a| String |  Server relative URL of the folder to create. For example, `/Shared Documents/new folder` creates a folder in the `Shared Documents` list. |  | x
| Welcome Page a| String |  Welcome page property of the folder, for example, `index.html` |  |
| Target Variable a| String |  The name of a variable that stores the operation's output |  |
| Target Value a| String |  An expression that evaluates against the operation's output. The outcome of this expression is stored in the target variable. |  #[payload] |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors |  |
|===

==== Output
[%autowidth.spread]
|===
|Type |<<SharepointFolder>>
|===

=== Associated Configurations
* <<sharepoint-online>>
* <<sharepoint-onpremise>>

==== Throws
* SHAREPOINT:INVALID_PARAMETERS
* SHAREPOINT:RETRY_EXHAUSTED
* SHAREPOINT:UNKNOWN
* SHAREPOINT:NOT_FOUND
* SHAREPOINT:CONNECTIVITY


[[folderDelete]]
=== Folder Delete
`<sharepoint:folder-delete>`


Deletes a folder from a Document list


==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use | | x
| Url a| String |  Server relative URL of the folder to delete. For example, `/Shared Documents/new folder`, deletes `new folder` from the `Shared Documents` list. |  | x
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors |  |
|===


=== Associated Configurations
* <<sharepoint-online>>
* <<sharepoint-onpremise>>

==== Throws
* SHAREPOINT:INVALID_PARAMETERS
* SHAREPOINT:RETRY_EXHAUSTED
* SHAREPOINT:UNKNOWN
* SHAREPOINT:NOT_FOUND
* SHAREPOINT:CONNECTIVITY


[[folderQuery]]
=== Folder Query
`<sharepoint:folder-query>`


Retrieves all folders that match the specified criteria.


==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use | | x
| Query a| String |  OData query in the format `listDocumentName?queryString`, for example, `Shared Documents?$select=Name&&#36;folderName` |  | x
| Starting Folder Path a| String |  The starting path of the folder from where to begin the query, relative to the document library selected as part of the query. For example, `/myfolder/level2` searches for folders inside `/document library/myfolder/level2`. NOTE: You must specify the document library as part of the query. |  / |
| Recursive a| Boolean |  Specifies whether to search recursively in inner folders |  false |
| Target Variable a| String |  The name of a variable that stores the operation's output |  |
| Target Value a| String |  An expression that evaluates against the operation's output. The outcome of this expression is stored in the target variable. |  #[payload] |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors |  |
|===

==== Output
[%autowidth.spread]
|===
|Type |Array of Object
|===

=== Associated Configurations
* <<sharepoint-online>>
* <<sharepoint-onpremise>>

==== Throws
* SHAREPOINT:INVALID_PARAMETERS
* SHAREPOINT:RETRY_EXHAUSTED
* SHAREPOINT:UNKNOWN
* SHAREPOINT:NOT_FOUND
* SHAREPOINT:CONNECTIVITY


[[getMetadata]]
=== Get Metadata
`<sharepoint:get-metadata>`


Gets the metadata of a determined file.


==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use. | | x
| File Server Relative Url a| String | The path of the item that is retrieved for its metadata. |  | x
| Target Variable a| String |  The name of a variable that stores the operation's output. |  |
| Target Value a| String |  An expression that evaluates against the operation's output. The outcome of this expression is stored in the target variable. |  #[payload] |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors |  |
|===

==== Output
[%autowidth.spread]
|===
|Type |<<SharepointFile>>
|===

=== Associated Configurations
* <<sharepoint-online>>
* <<sharepoint-onpremise>>

==== Throws
* SHAREPOINT:INVALID_PARAMETERS
* SHAREPOINT:RETRY_EXHAUSTED
* SHAREPOINT:UNKNOWN
* SHAREPOINT:NOT_FOUND
* SHAREPOINT:CONNECTIVITY


[[listCreate]]
=== List Create
`<sharepoint:list-create>`


Creates a new SharePointList.


==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use | | x
| List a| <<SharepointList>> |  SharePoint List reference to create |  |
| Target Variable a| String |  The name of a variable that stores the operation's output |  | x
| Target Value a| String |  An expression that evaluates against the operation's output. The outcome of this expression is stored in the target variable. |  #[payload] |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors |  |
|===

==== Output
[%autowidth.spread]
|===
|Type |<<SharepointList>>
|===

=== Associated Configurations
* <<sharepoint-online>>
* <<sharepoint-onpremise>>

==== Throws
* SHAREPOINT:INVALID_PARAMETERS
* SHAREPOINT:RETRY_EXHAUSTED
* SHAREPOINT:UNKNOWN
* SHAREPOINT:NOT_FOUND
* SHAREPOINT:CONNECTIVITY


[[listDelete]]
=== List Delete
`<sharepoint:list-delete>`


Deletes a SharePoint list.


==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use | | x
| List Id a| String |  ID of the list to delete |  | x
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors |  |
|===


=== Associated Configurations
* <<sharepoint-online>>
* <<sharepoint-onpremise>>

==== Throws
* SHAREPOINT:INVALID_PARAMETERS
* SHAREPOINT:RETRY_EXHAUSTED
* SHAREPOINT:UNKNOWN
* SHAREPOINT:NOT_FOUND
* SHAREPOINT:CONNECTIVITY


[[listGet]]
=== List Get
`<sharepoint:list-get>`


Retrieves a SharePoint list.


==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use | | x
| List Id a| String |  ID of the list to retrieve |  | x
| Target Variable a| String |  The name of a variable that stores the operation's output |  |
| Target Value a| String |  An expression that evaluates against the operation's output. The outcome of this expression is stored in the target variable. |  #[payload] |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors |  |
|===

==== Output
[%autowidth.spread]
|===
|Type |<<SharepointList>>
|===

=== Associated Configurations
* <<sharepoint-online>>
* <<sharepoint-onpremise>>

==== Throws
* SHAREPOINT:INVALID_PARAMETERS
* SHAREPOINT:RETRY_EXHAUSTED
* SHAREPOINT:UNKNOWN
* SHAREPOINT:NOT_FOUND
* SHAREPOINT:CONNECTIVITY


[[listGetAll]]
=== List Get All
`<sharepoint:list-get-all>`


Retrieves all SharePoint lists.


==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use | | x
| Target Variable a| String |  The name of a variable that stores the operation's output |  |
| Target Value a| String |  An expression that evaluates against the operation's output. The outcome of this expression is stored in the target variable. |  #[payload] |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors |  |
|===

==== Output
[%autowidth.spread]
|===
|Type |Array of <<SharepointList>>
|===

=== Associated Configurations
* <<sharepoint-online>>
* <<sharepoint-onpremise>>

==== Throws
* SHAREPOINT:INVALID_PARAMETERS
* SHAREPOINT:RETRY_EXHAUSTED
* SHAREPOINT:UNKNOWN
* SHAREPOINT:NOT_FOUND
* SHAREPOINT:CONNECTIVITY


[[listItemCreate]]
=== List Item Create
`<sharepoint:list-item-create>`


Creates a new Item in an existing SharePoint list.


==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use | | x
| List Id a| String |  ID of the list in which to create the item |  | x
| Properties a| Object |  Properties of the item to create |  | x
| Target Variable a| String |  The name of a variable that stores the operation's output |  |
| Target Value a| String |  An expression that evaluates against the operation's output. The outcome of this expression is stored in the target variable. |  #[payload] |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors |  |
|===

==== Output
[%autowidth.spread]
|===
|Type |Object
|===

=== Associated Configurations
* <<sharepoint-online>>
* <<sharepoint-onpremise>>

==== Throws
* SHAREPOINT:INVALID_PARAMETERS
* SHAREPOINT:RETRY_EXHAUSTED
* SHAREPOINT:UNKNOWN
* SHAREPOINT:NOT_FOUND
* SHAREPOINT:CONNECTIVITY


[[listItemDelete]]
=== List Item Delete
`<sharepoint:list-item-delete>`


Deletes an Item from a SharePoint list.


==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use | | x
| List Id a| String |  ID of the list in which to delete the Item |  | x
| Item Id a| String |  ID of the item to delete |  | x
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors |  |
|===


=== Associated Configurations
* <<sharepoint-online>>
* <<sharepoint-onpremise>>

==== Throws
* SHAREPOINT:INVALID_PARAMETERS
* SHAREPOINT:RETRY_EXHAUSTED
* SHAREPOINT:UNKNOWN
* SHAREPOINT:NOT_FOUND
* SHAREPOINT:CONNECTIVITY


[[listItemQuery]]
=== List Item Query
`<sharepoint:list-item-query>`


Executes a query against a SharePoint list and returns list items that match the specified criteria. This operation returns the list of all items because the operation supports pagination.


==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use | | x
| Query a| String |  Query in the format `listId?queryString` |  | x
| Retrieve References a| Boolean |  Retrieves full objects for reference fields. NOTE: Large lists with a lot of reference fields can take a long time to retrieve. |  false |
| Streaming Strategy a| * <<repeatable-in-memory-iterable>>
* <<repeatable-file-store-iterable>>
* non-repeatable-iterable |  Configure how Mule processes streams with streaming strategies. Repeatable streams are the default behavior. |  |
| Target Variable a| String |  The name of a variable that stores the operation's output |  |
| Target Value a| String |  An expression that evaluates against the operation's output. The outcome of this expression is stored in the target variable. |  #[payload] |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors |  |
|===

==== Output
[%autowidth.spread]
|===
|Type |Array of Object
|===

=== Associated Configurations
* <<sharepoint-online>>
* <<sharepoint-onpremise>>

==== Throws
* SHAREPOINT:UNKNOWN
* SHAREPOINT:CONNECTIVITY


[[listItemUpdate]]
=== List Item Update
`<sharepoint:list-item-update>`


Updates an Item from a SharePoint list.


==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use | | x
| List Id a| String |  ID of the list in which to update the item |  | x
| Item Id a| String |  ID of the item to update |  | x
| Updated Properties a| Object |  Item properties to update |  | x
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors |  |
|===


=== Associated Configurations
* <<sharepoint-online>>
* <<sharepoint-onpremise>>

==== Throws
* SHAREPOINT:INVALID_PARAMETERS
* SHAREPOINT:RETRY_EXHAUSTED
* SHAREPOINT:UNKNOWN
* SHAREPOINT:NOT_FOUND
* SHAREPOINT:CONNECTIVITY


[[listUpdate]]
=== List Update
`<sharepoint:list-update>`


Updates the specified properties of a SharePoint list.


==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use | | x
| List Id a| String |  ID of the list to update |  | x
| List a| <<SharepointList>> |  List properties to update |  | x
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors |  |
|===


=== Associated Configurations
* <<sharepoint-online>>
* <<sharepoint-onpremise>>

==== Throws
* SHAREPOINT:INVALID_PARAMETERS
* SHAREPOINT:RETRY_EXHAUSTED
* SHAREPOINT:UNKNOWN
* SHAREPOINT:NOT_FOUND
* SHAREPOINT:CONNECTIVITY


[[resolveCollection]]
=== Resolve Collection
`<sharepoint:resolve-collection>`


Executes an HTTP GET against the SharePoint API.


==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use | | x
| Url a| String |  The absolute or relative URL to get |  | x
| Target Variable a| String |  The name of a variable that stores the operation's output |  |
| Target Value a| String |  An expression that evaluates against the operation's output. The outcome of this expression is stored in the target variable. |  #[payload] |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors |  |
|===

==== Output
[%autowidth.spread]
|===
|Type |Array of Object
|===

=== Associated Configurations
* <<sharepoint-online>>
* <<sharepoint-onpremise>>

==== Throws
* SHAREPOINT:INVALID_PARAMETERS
* SHAREPOINT:RETRY_EXHAUSTED
* SHAREPOINT:UNKNOWN
* SHAREPOINT:NOT_FOUND
* SHAREPOINT:CONNECTIVITY


[[resolveObject]]
=== Resolve Object
`<sharepoint:resolve-object>`


Executes an HTTP GET against the SharePoint API. (Executes a POST if the body is blob).


==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use | | x
| Url a| String |  The absolute or relative URL to get |  | x
| Request Type a| Enumeration, one of:

** Get
** Create
** Merge
** Delete |  The request type to be sent. |  Get |
| Request Body a| Any |  Body of the request to send. The operation sends `null` if the request body is empty. |  |
| Target Variable a| String |  The name of a variable that stores the operation's output |  |
| Target Value a| String |  An expression that evaluates against the operation's output. The outcome of this expression is stored in the target variable. |  #[payload] |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors |  |
|===

==== Output
[%autowidth.spread]
|===
|Type |Object
|===

=== Associated Configurations
* <<sharepoint-online>>
* <<sharepoint-onpremise>>

==== Throws
* SHAREPOINT:INVALID_PARAMETERS
* SHAREPOINT:RETRY_EXHAUSTED
* SHAREPOINT:UNKNOWN
* SHAREPOINT:NOT_FOUND
* SHAREPOINT:CONNECTIVITY


[[unauthorize]]
=== Unauthorize
`<sharepoint:unauthorize>`

Deletes all the access token information of a given resource owner ID so that it is impossible to execute any operation for that user without doing the authorization dance again.

==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use. | | x
| Resource Owner Id a| String |  ID of the resource owner of which access should be invalidated |  |
|===


==== Associated Configurations
* <<sharepoint-online>>

== Types
[[Reconnection]]
=== Reconnection

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Fails Deployment a| Boolean | When the application is deployed, a connectivity test is performed on all connectors. If set to true, deployment fails if the test doesn't pass after exhausting the associated reconnection strategy. |  |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> | The reconnection strategy to use. |  |
|===

[[reconnect]]
=== Reconnect

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Frequency a| Number | How often to reconnect (in milliseconds). | |
| Count a| Number | The number of reconnection attempts to make. | |
| blocking |Boolean |If false, the reconnection strategy runs in a separate, non-blocking thread. |true |
|===

[[reconnect-forever]]
=== Reconnect Forever

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Frequency a| Number | How often in milliseconds to reconnect. | |
| blocking |Boolean |If false, the reconnection strategy runs in a separate, non-blocking thread. |true |
|===

[[ExpirationPolicy]]
=== Expiration Policy

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Max Idle Time a| Number | A scalar time value for the maximum amount of time a dynamic configuration instance should be allowed to be idle before it's considered eligible for expiration |  |
| Time Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS | A time unit that qualifies the maxIdleTime attribute |  |
|===

[[RedeliveryPolicy]]
=== Redelivery Policy

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Max Redelivery Count a| Number | The maximum number of times a message can be redelivered and processed unsuccessfully before triggering a process-failed message |  |
| Use Secure Hash a| Boolean | Whether to use a secure hash algorithm to identify a redelivered message. |  |
| Message Digest Algorithm a| String | The secure hashing algorithm to use.  | SHA-256 |
| Id Expression a| String | Defines one or more expressions to use to determine when a message has been redelivered. This property can be set only if useSecureHash is false. |  |
| Object Store a| Object Store | The object store where the redelivery counter for each message is stored. |  |
|===

[[DeletedObject]]
=== Deleted Object

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Author Email a| String |  |  |
| Author Name a| String |  |  |
| Deleted By Name a| String |  |  |
| Deleted Date a| String |  |  |
| Deleted Date Local Formatted a| String |  |  |
| Dir Name a| String |  |  |
| Id a| String |  |  |
| Item State a| Number |  |  |
| Item Type a| Number |  |  |
| Size a| String |  |  |
| Title a| String |  |  |
|===

[[SharepointFile]]
=== SharePoint File

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Author a| Object |  |  |
| Check In Comment a| String |  |  |
| Check Out Type a| String |  |  |
| Checked Out By User a| Object |  |  |
| Content Tag a| String |  |  |
| Customized Page Status a| String |  |  |
| E Tag a| String |  |  |
| Exists a| Boolean |  |  |
| Length a| Number |  |  |
| Level a| Number |  |  |
| Linking Url a| String |  |  |
| List Item All Fields a| Object |  |  |
| Locked By User a| Object |  |  |
| Major Version a| Number |  |  |
| Metadata a| Object |  |  |
| Minor Version a| Number |  |  |
| Modified By a| Object |  |  |
| Name a| String |  |  |
| Server Relative Url a| String |  |  |
| Time Created a| String |  |  |
| Time Last Modified a| String |  |  |
| Title a| String |  |  |
| U I Version a| Number |  |  |
| U I Version Label a| String |  |  |
| Unique Id a| String |  |  |
| Versions a| Object |  |  |
|===

[[SharepointFolder]]
=== SharePoint Folder

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Exists a| Boolean |  |  |
| Files a| Object |  |  |
| Folders a| Object |  |  |
| Item Count a| Number |  |  |
| List Item All Fields a| Object |  |  |
| Metadata a| Object |  |  |
| Name a| String |  |  |
| Parent Folder a| Object |  |  |
| Properties a| Object |  |  |
| Server Relative Url a| String |  |  |
| Time Created a| String |  |  |
| Time Last Modified a| String |  |  |
| Unique Id a| String |  |  |
| Welcome Page a| String |  |  |
|===

[[SharepointList]]
=== SharePoint List

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Allow Content Types a| Boolean |  |  |
| Base Template a| Enumeration, one of:

** GENERIC_LIST
** DOCUMENT_LIBRARY
** SURVEY
** LINKS
** ANNOUNCEMENTS
** CONTACTS
** EVENTS
** TASKS
** DISCUSSION_BOARD
** PICTURE_LIBRARY
** DATASOURCES
** WEB_TEMPLATE_CATALOG
** USER_INFORMATION
** WEB_PART_CATALOG
** LIST_TEMPLATE_CATALOG
** XML_FORM
** MASTER_PAGE_CATALOG
** NO_CODE_WORKFLOWS
** WORKFLOW_PROCESS
** WEB_PAGE_LIBRARY
** CUSTOM_GRID
** SOLUTION_CATALOG
** NO_CODE_PUBLIC
** THEME_CATALOG
** DESIGN_CATALOG
** APP_DATA_CATALOG
** DATA_CONNECTION_LIBRARY
** WORKFLOW_HISTORY
** GANTT_TASKS
** HELP_LIBRARY
** ACCESS_REQUEST
** TASKS_WITH_TIMELINE_AND_HIERARCHY
** MAINTENANCE_LOGS
** MEETINGS
** AGENDA
** MEETING_USER
** DECISION
** MEETING_OBJECTIVE
** TEXT_BOX
** THINGS_TO_BRING
** HOME_PAGE_LIBRARY
** POSTS
** COMMENTS
** CATEGORIES
** FACILITY
** WHEREABOUTS
** CALL_TRACK
** CIRCULATION
** TIMECARD
** HOLIDAYS
** IME_DIC
** EXTERNAL_LIST
** MY_SITE_DOCUMENT_LIBRARY
** ISSUE_TRACKING
** ADMIN_TASKS
** HEALTH_RULES
** HEALTH_REPORTS
** DEVELOPER_SITE_DRAFT_APPS |  |  |
| Base Type a| Number |  |  |
| Content Types a| Object |  |  |
| Content Types Enabled a| Boolean |  |  |
| Crawl Non Default Views a| Boolean |  |  |
| Creatables Info a| Object |  |  |
| Created a| String |  |  |
| Default Content Approval Workflow Id a| String |  |  |
| Default Display Form Url a| String |  |  |
| Default Edit Form Url a| String |  |  |
| Default New Form Url a| String |  |  |
| Default View a| Object |  |  |
| Description a| String |  |  |
| Description Resource a| Object |  |  |
| Direction a| Enumeration, one of:

** NONE
** LTR
** RTL |  |  |
| Document Template Url a| String |  |  |
| Draft Version Visibility a| Enumeration, one of:

** READER
** AUTHOR
** APPROVER |  |  |
| Enable Attachments a| Boolean |  |  |
| Enable Folder Creation a| Boolean |  |  |
| Enable Minor Versions a| Boolean |  |  |
| Enable Moderation a| Boolean |  |  |
| Enable Versioning a| Boolean |  |  |
| Entity Type Name a| String |  |  |
| Event Receivers a| Object |  |  |
| Fields a| Object |  |  |
| First Unique Ancestor Securable Object a| Object |  |  |
| Force Checkout a| Boolean |  |  |
| Forms a| Object |  |  |
| Has External Data Source a| Boolean |  |  |
| Hidden a| Boolean |  |  |
| Id a| String |  |  |
| Image Url a| String |  |  |
| Information Rights Management Settings a| Object |  |  |
| Irm Enabled a| Boolean |  |  |
| Irm Expire a| Boolean |  |  |
| Irm Reject a| Boolean |  |  |
| Is Application List a| Boolean |  |  |
| Is Catalog a| Boolean |  |  |
| Is Private a| Boolean |  |  |
| Item Count a| Number |  |  |
| Items a| Object |  |  |
| Last Item Deleted Date a| String |  |  |
| Last Item Modified Date a| String |  |  |
| List Item Entity Type Full Name a| String |  |  |
| Major Version Limit a| Number |  |  |
| Major With Minor Versions Limit a| Number |  |  |
| Metadata a| Object |  |  |
| Multiple Data List a| Boolean |  |  |
| No Crawl a| Boolean |  |  |
| On Quick Launch a| Boolean |  |  |
| Parent Web a| Object |  |  |
| Parent Web Url a| String |  |  |
| Parser Disabled a| Boolean |  |  |
| Role Assignments a| Object |  |  |
| Root Folder a| Object |  |  |
| Server Template Can Create Folders a| Boolean |  |  |
| Template Feature Id a| String |  |  |
| Title a| String |  |  |
| Title Resource a| Object |  |  |
| User Custom Actions a| Object |  |  |
| Validation Formula a| String |  |  |
| Validation Message a| String |  |  |
| Views a| Object |  |  |
| Workflow Associations a| Object |  |  |
|===

[[repeatable-in-memory-iterable]]
=== Repeatable In Memory Iterable

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Initial Buffer Size a| Number | The number of instances to initially keep in memory to consume the stream and provide random access to it. If the stream contains more data than can fit into this buffer, then the buffer expands according to the bufferSizeIncrement attribute, with an upper limit of maxInMemorySize. |  100 |
| Buffer Size Increment a| Number | This is by how much the buffer size expands if it exceeds its initial size. Setting a value of zero or lower means that the buffer should not expand, meaning that a STREAM_MAXIMUM_SIZE_EXCEEDED error is raised when the buffer gets full. | 100 |
| Max Buffer Size a| Number | The maximum amount of memory to use. If more memory is used, a STREAM_MAXIMUM_SIZE_EXCEEDED error is raised. A value lower than or equal to zero means no limit. |  |
|===

[[repeatable-file-store-iterable]]
=== Repeatable File Store Iterable

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| In Memory Objects a| Number | The maximum amount of instances to keep in memory. If more than what is specified is required, content on the disk is buffered. |  |
| Buffer Unit a| Enumeration, one of:

** BYTE
** KB
** MB
** GB | The unit in which maxInMemorySize is expressed |  |
|===

== See Also

https://help.mulesoft.com[MuleSoft Help Center]
